==Mariculture 1.7.2 BETA 2==
* Vanilla overriding should now work for biomes, fish and fishing rods
* Fixed the Enchiridion Dependency, now an optional dependency
* Removed Creepers avoiding players holding catfish
* Scuba Gear will last longer
* Natural Gas now only affects players
* Removed random explosions from natural gas

==Mariculture 1.7.2 BETA 1==
==== BETA Notes ====
* This is purely for helping me test, I would like to see as many bugs reported as possible except the ones listed here.
* MAJOR: You need to install 'Enchiridion' if you want to keep my books, it's been split to a seperate mod for 'reasons'.
* Custom fluids/recipes for 1.7 with regards to crucible furnace aren't implemented yet, I plan to have all recipes for each machine to be customisable so that's off for now
* Plugins for mods, like tinkers and BOP are not implemented yet
* The screwed up rendering of void bottles is known, and is on the to do list
* Currently disabling the Fishery module can have dire consequences due to the vanilla fishing override, will sort this out later
* The Vanilla Overriding for fish and fishing rods isn't working correctly
* Some of the biomes that I should be overwriting aren't being, due to not giving proper names
* There is a crash when you wear scuba/diving gear underwater
* There's a startup error in the console, about failing to extend enchantment maximum
* Jewelry Enchanting has changed, the book has not yet been updated
* Please do as much testing as possible and report all bugs/quirks etc. on my github at: https://github.com/joshiejack/Mariculture/issues?state=open

==== Other ====
* Added Fluid Dictionary (Disabled by default, as it can be a bit exploitive xp wise, if not used correctly)
* Damaging jewelry will now not apply the damage to every item, but split it out across the items(if it's doing more than one damage), otherwise rings will die first, then bracelets, then necklaces.